--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -5,7 +5,7 @@ python3-autoreload = true
 
 # Django-related settings
 # the base directory (full path)
-chdir = /srv/semana_lince/
+chdir = /srv/semana-lince/
 # Django's wsgi file
 module = sl.wsgi
 # the virtualenv (full path)
@@ -22,5 +22,5 @@ chmod-socket = 666
 # clear environment on exit
 vacuum = true
 enable-threads = true
-uid = www-data
-gid = www-data
+uid = aldoea
+gid = lincestaff
