--- a/semana_lince.conf
+++ b/semana_lince.conf
@@ -3,7 +3,7 @@ location /static {
     alias /srv/www/vitanova_backend/static;
 }
 
-location /malu {
+location /api {
     uwsgi_pass unix:/tmp/sl.sock;
     include /srv/semana-lince/uwsgi_params;
 }
