--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ parso==0.1.1
 pexpect==4.5.0
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
+psycopg2==2.7.4
 ptyprocess==0.5.2
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
